tests/NormalTests/paczka1/small_fuzzy/59301834.err
Error in line 1: lVrNo8F71 A823 89,8
Error in line 3: lVrNo8F71 A904 60,2
Error in line 9: 44pn16 S774 49,8
